[ADD][FIX] Book: Top and New Books
Added Top and New Book Searching functionalities

Added BookSearchType for Top and NewBooks Operations

Readjusted Mapping form AutoMapper to Service files

Fixed an issue where books with the same ISBN can actively exist

--- a/Readiculous.WebApp/Views/Book/Edit.cshtml
+++ b/Readiculous.WebApp/Views/Book/Edit.cshtml
@@ -8,6 +8,8 @@
 <hr />
 <form asp-action="Edit" enctype="multipart/form-data">
     <input type="hidden" asp-for="BookId" />
+    <input type="hidden" asp-for="CreatedBy" />
+    <input type="hidden" asp-for="UpdatedBy" />
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
