--- a/Readiculous.WebApp/Views/Book/Details.cshtml
+++ b/Readiculous.WebApp/Views/Book/Details.cshtml
@@ -120,8 +120,6 @@
             </div>
         }
 
-        @{/*
-        <!-- Optional: Reviews Section -->
         @if (Model.Reviews != null && Model.Reviews.Any())
         {
             <div class="mb-4">
@@ -132,12 +130,12 @@
                         <li class="list-group-item">
                             <strong>Rating:</strong> @review.Rating.ToString("0.0")<br />
                             <strong>Comment:</strong> @review.Comment
+                            <p>Posted at: @review.CreatedTime</p>
                         </li>
                     }
                 </ul>
             </div>
         }
-        */}
 
         <div class="form-group mt-4">
             <a asp-action="Edit" asp-route-id="@Model.BookId" class="btn btn-primary">Edit</a>
