--- a/Readiculous.WebApp/Views/User/Details.cshtml
+++ b/Readiculous.WebApp/Views/User/Details.cshtml
@@ -47,7 +47,6 @@
         <dd class="col-sm-9">@Html.DisplayFor(model => model.UpdatedTime)</dd>
     </dl>
 
-    @{/*
     <h4 class="mt-4">User Reviews</h4>
     <hr />
     @if (Model.UserReviewModels != null && Model.UserReviewModels.Any())
@@ -56,10 +55,10 @@
             @foreach (var review in Model.UserReviewModels)
             {
                 <li class="list-group-item">
-                    <div><strong>Book:</strong> @review.BookTitle</div>
+                    <div><strong>Book:</strong> @review.BookName</div>
                     <div><strong>Rating:</strong> @review.Rating.ToString("0.0")</div>
                     <div><strong>Comment:</strong> @review.Comment</div>
-                    <small class="text-muted">Reviewed on: @review.ReviewTime.ToString("g")</small>
+                    <small class="text-muted">Reviewed on: @review.CreatedTime.ToString("g")</small>
                 </li>
             }
         </ul>
@@ -68,7 +67,6 @@
     {
         <p class="text-muted">No reviews from this user.</p>
     }
-    */}
 
     <h4 class="mt-4">Favorite Books</h4>
     <hr />
