[ADD] Review: Added Edit and Delete Review Feature
Refactored database to make ReviewId the PK instead of composite primary keys of BookId and UserId

Adjusted Razor Pages to accommodate adjusted ViewModels, and added additional logic on Review Repository and Service.

--- a/Readiculous.WebApp/Views/Book/Index.cshtml
+++ b/Readiculous.WebApp/Views/Book/Index.cshtml
@@ -120,6 +120,10 @@
                     {
                         <a asp-action="CreateReview" asp-route-id="@item.BookId" class="btn btn-sm btn-warning">Add Review</a>
                     }
+                    else
+                    {
+                        <a asp-action="EditReview" asp-route-id="@item.BookId" class="btn btn-sm btn-warning">Edit Review</a>
+                    }
                 </td>
             </tr>
         }
