--- a/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
@@ -61,14 +61,16 @@
             </div>
         </div>
     </div>
-    <div class="row mx-0 align-items-center">
-        <div class="col-md-6 px-0 text-center text-md-start">
+
+    <div class="row mb-4 mx-0 align-items-center">
+        <div class="col-md-6 px-0">
             @await Component.InvokeAsync("Pagination", Model.Pagination)
         </div>
         <div class="col-md-6 px-0 text-md-end">
             @await Component.InvokeAsync("PageSize", new { currentPageSize = Model.Pagination.PageSize })
         </div>
     </div>
+
 </div>
 
 <!-- Add User Modal -->
