--- a/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
@@ -1,42 +1,63 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
-
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-            <img src="~/img/asi-logo-invert.svg" alt="Logo" height="30">
-        </a>
-
-        <div class="navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
-                        <img src="~/img/profile-logo.png" class="rounded-circle" height="30" alt="Profile">
-                        @HttpContextAccessor.HttpContext.Session.GetString("UserName")
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">
-                            <i class="fas fa-gear mr-2"></i>Settings
-                        </a>
-                        <a class="dropdown-item" asp-action="SignOutUser" asp-controller="Account">
-                            <i class="fas fa-right-from-bracket mr-2"></i>Logout
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-controller="UserMaster" asp-action="UserMasterScreen">
-                            <i class="fas fa-users mr-2"></i>User Master
-                        </a>
-                        <a class="dropdown-item" asp-controller="User" asp-action="Index">
-                            <i class="fas fa-users mr-2"></i>User
-                        </a>
-                        <a class="dropdown-item" asp-controller="Genre" asp-action="Index">
-                            <i class="fas fa-list mr-2"></i>Genre
-                        </a>
-                        <a class="dropdown-item" asp-controller="Book" asp-action="Index">
-                            <i class="fas fa-book mr-2"></i>Book
-                        </a>
-                    </div>
-                </li>
-            </ul>
+<header class="@((ViewBag.LoginView == true) ? "hide-navbar" : "")" style="background-color: var(--color-header); color: var(--color-text);">
+    <div class="logosec hover-pointer" style="display: flex; align-items: center; gap: 10px;">
+        <img src="~/img/readiculous-logo.svg"
+             style="width: 40px; height: 40px;" alt="logo"
+             onclick="window.location.href = '@Url.Action("Index", "Home")';">
+        <span style="font-weight: bold; font-size: 1.2rem;"
+              onclick="window.location.href = '@Url.Action("Index", "Home")';">Readiculous</span>
+    </div>
+    <div class="logosec">
+        @HttpContextAccessor.HttpContext.Session.GetString("UserName")
+        <div class="mr-20 hover-pointer" style="position: relative">
+            <div class="dp">
+                <img src="~/img/profile-logo.png"
+                     class="dpicn hover-pointer"
+                     alt="dp">
+            </div>
+            <div class="dropdown" style="background-color: var(--color-modal);">
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-gear"></i>
+                        <a href="#">Settings</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <a asp-action="SignOutUser" asp-controller="Account">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fa-solid fa-users"></i>
+                        <a asp-controller="UserMaster" asp-action="UserMasterScreen">User Master</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fa-solid fa-users"></i>
+                        <a asp-controller="User" asp-action="Index">User</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fa-solid fa-list"></i>
+                        <a asp-controller="Genre" asp-action="Index">Genre</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fa-solid fa-book"></i>
+                        <a asp-controller="Book" asp-action="Index">Book</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-</nav>
+</header>
+
+<style>
+    .dropdown ul li:hover {
+        background-color: var(--color-btn);
+    }
+
+    .dropdown a {
+        color: var(--color-text);
+    }
+
+    header {
+        border-bottom: 1px solid var(--color-text);
+    }
+</style>
