--- a/Readiculous.WebApp/Views/Shared/_Layout.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>@ViewData["Title"]</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
@@ -23,7 +23,7 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    <partial name="_Header" />
+    <partial name="_HeaderTest" />
     <main role="main" class="container-xxl py-4 px-3 px-sm-4 px-xxl-0 mx-auto">
         @RenderBody()
     </main>
