--- a/Readiculous.WebApp/wwwroot/css/site.css
+++ b/Readiculous.WebApp/wwwroot/css/site.css
@@ -1,4 +1,14 @@
-﻿html {
+﻿:root {
+    --color-text: #2C2133;
+    --color-header: #B089A5;
+    --color-btn: #EDAEC0;
+    --color-modal: #F8ECE9;
+    --color-background: #F2EFF1;
+}
+
+
+
+html {
     font-size: 14px;
 }
 
@@ -19,6 +29,9 @@ html {
 
 body {
     margin-bottom: 60px;
+    background-color: var(--color-background);
+    color: var(--color-text);
+    font-family: 'Gentium Book Plus', serif;
 }
 
 .footer {
